finalizing docker containers

--- a/env/dev.env
+++ b/env/dev.env
@@ -1,6 +1,11 @@
 DATABASE_PORT=3306
+DATABASE_USER=root
+DATABASE_PASSWORD=password
+DATABASE_ROOT_PASSWORD=password
+DATABASE_NAME=notes
+DATABASE_HOST=db # use container name
 APP_URL=localhost
-APP_PORT=3000
+APP_PORT=3004
 JWT_SECRET=FWMlqP5acvO6mWVwNClN
 JWT_TOKEN_REFRESH_TIME=365d
 JWT_TOKEN_TIME=2h
